# bazel_exp_cc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
cc/cc_shared_library/: BUILD.bazel
cc/lib/: BUILD.bazel  bar.cc  bar.h  bar_internal.cc  bar_internal.h  foo.cc  foo.h  foo_internal.cc  foo_internal.h
cc/static/: BUILD.bazel  main.cc
